[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "style_lock"
version = "0.1.0"
description = "Style Lock Pack compiler for image-generation style locking"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "style_lock contributors" }]
dependencies = [
  "torch",
  "torchvision",
  "timm",
  "open_clip_torch",
  "pillow",
  "opencv-python",
  "imagehash",
  "numpy",
  "pandas",
  "scikit-learn",
  "umap-learn",
  "hdbscan",
  "matplotlib",
  "pyyaml",
  "typer",
  "rich",
  "pydantic",
  "tqdm",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
stylelock = "style_lock.cli:app"

[tool.setuptools.packages.find]
include = ["style_lock*"]

[tool.pytest.ini_options]
markers = ["smoke: smoke test for run-all pipeline"]
